# audapolis

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/: FUNDING.yml
.github/workflows/: auto_rebase.yml  build.yml  check.yml  import_cert.sh  pre-commit.yml  release.yml
app/: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  README.md  electron-builder.config.js  forge.config.js  get_version.js  jest.config.js  package-lock.json  package.json  run-app.nix  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js
app/assets/: README.md  generate_icons.sh  icon.icns
app/assets/icons/: icon.icns
app/ipc/: ipc_main.ts  ipc_renderer.ts
app/main_process/: index.ts  ipc.ts  menu.ts  server.ts  types.ts  vite_main.config.js
app/main_process/ipc/: ipc.ts  ipc_client.ts  windowList.ts
app/scripts/: build.js  dev.js  generate_licenses.mjs
app/src/: custom.d.ts  index.css  index.html  index.tsx  renderer.tsx  start.ts  theme.d.ts  vite_main.config.js  vite_renderer.config.js
app/src/components/: App.tsx  Controls.tsx  Editor.tsx  FilePicker.tsx  Joyride.tsx  Landing.tsx  ManageServer.tsx  Menu.tsx  MenuBar.tsx  ServerSettings.tsx  Settings.tsx  TitleBar.tsx  Tour.tsx  Transcribe.tsx  Transcribing.tsx  Util.tsx  menu.ts  theme.ts  useListener.ts
app/src/core/: document.spec.ts  document.ts  ffmpeg.ts  otio.ts  player.ts  webaudio.ts  webvtt.spec.ts  webvtt.ts
app/src/exporters/: ffmpeg.ts
app/src/joyride/: LandingJoyride.tsx  ModelManagerJoyride.tsx  TranscribeJoyride.tsx
app/src/main_process/: index.ts  ipc.ts  menu.ts  server.ts  windowList.ts
app/src/pages/: About.tsx  Landing.tsx  LanguageSettings.tsx  ManageServer.tsx  ModelManager.tsx  ServersList.tsx  Settings.tsx  Transcribe.tsx  Transcribing.tsx
app/src/server_api/: api.ts  index.ts
app/src/state/: document.ts  editor.ts  index.ts  models.ts  nav.ts  server.ts  transcribe.ts  util.ts
app/src/types/: svg.d.ts  (+9 more)
data/: .gitignore  config.yml  download_models.sh
doc/: fileformat_v3.md
server/: .gitignore  Dockerfile  README.md  build_server.sh  docker-compose.yml  pyoxidizer.bzl  pyproject.toml  requirements.txt  run.py  shell.nix
server/app/: config.py  main.py  models.py  models.yml  otio.py  tasks.py  transcribe.py
server/scripts/: generate_models_list.py  list_tasks.py  transcribe.py
(+59 files in other folders)
