[tool.poetry]
name = "Audapolis Server"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
vosk = "^0.3.31"
python-multipart = "^0.0.5"
pydub = "^0.25.1"
SoundFile = "^0.10.3"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.8b0"
flake8 = "^3.9.2"
requests = "^2.26.0"
rich = "^10.9.0"
types-requests = "^2.25.6"
types-PyYAML = "^5.4.10"
mypy = "^0.910"
beautifulsoup4 = "^4.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
