[tool.poetry]
name = "Audapolis Server"
version = "0.0.1"
description = ""
authors = [
    "pajowu <audapolis@ca.pajowu.de>",
    "Jaro Habiger <jarohabiger@googlemail.com>",
]

[tool.poetry.dependencies]
python = "^3.8, !=3.9.0, <3.11"
fastapi = "^0.85.0"
uvicorn = { extras = ["standard"], version = "^0.18.0" }
python-multipart = "^0.0.5"
pydub = "^0.25.1"
appdirs = "^1.4.4"
vosk = "^0.3.38, !=0.3.43"
requests = "^2.26.0"
OpenTimelineIO = "^0.14.0"
pydantic = "^1.8.2"
python_speech_features = "^0.6"
numpy = ">=1.22"
scipy = "^1.7.3"
webrtcvad = "^2.0.10"
scikit-learn = "^1.0.1"
pydiar = "^0.0.6"
punctuator = { git = "https://github.com/bugbakery/punctuator2", rev = "f5b98c3f73e6e6b5744e96b604c08afc31a3c093" }
setuptools = "<60.0.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.8b0"
flake8 = "^3.9.2"
rich = "^10.9.0"
types-requests = "^2.25.6"
types-PyYAML = "^5.4.10"
mypy = "^0.910"
beautifulsoup4 = "^4.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
